# iua-game-project

./: .gitignore  CMakeLists.txt  Informe.docx  main.cpp  readme.MD
assets/: Mapa.tmx  Mapa.txt  MapaTiled.tmx
classes/: Boss.cpp  Boss.h  Bullet.cpp  Bullet.h  CheckForCollisions.cpp  Draw.cpp  Enemy.cpp  Enemy.h  EnemyMob.cpp  EnemyMob.h  Engine.cpp  Engine.h  FlyingEye.h  Goblin.cpp  Goblin.h  Habilidad.cpp  Habilidad.h  Heart.cpp  Heart.h  Hearth.cpp  Hearth.h  Input.cpp  Jake.cpp  Jake.h  Jefe.cpp  Jefe.h  Level.cpp  Level.h  Maggie.cpp  Maggie.h  Mapa.cpp  Mapa.h  Mushroom.h  Personaje.cpp  Personaje.h  Player.cpp  Player.h  Update.cpp  UpdateCollision.cpp  drawMenu.cpp  (+1 more)
